Changement de fichiers pour les commentaires